# warder

./: .gitignore  BRANDING.md  Cargo.toml  MVP_SCOPE.md  PRODUCT_SPEC.md  README.md  ROADMAP.md  SECURITY.md  THREAT_MODEL.md
.github/ISSUE_TEMPLATE/: alpha-review-feedback.yml  beta-review-feedback.yml  config.yml  security-finding.yml
.github/workflows/: ci.yml  ebpf-live-smoke.yml  release.yml
apps/desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json
apps/desktop/src/: App.button-audit.test.tsx  App.smoke.test.tsx  App.tsx  command.test.ts  command.ts  protectionGroups.ts  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  tests.rs
crates/cli/: Cargo.toml
crates/cli/src/: demo.rs  host_probe.rs  lib.rs  main.rs  setup.rs  tests.rs  tui.rs
crates/config/: Cargo.toml
crates/core/: Cargo.toml
crates/daemon/: Cargo.toml
crates/db/: Cargo.toml
crates/db/migrations/: 0001_initial.sql
crates/db/src/: lib.rs  tests.rs
crates/enforcement/: Cargo.toml
crates/gui-support/: Cargo.toml
crates/journal/: Cargo.toml
crates/policy/: Cargo.toml
crates/snapshot/: Cargo.toml
docs/: FAQ.md  README.md  architecture.md  audit-log.md  cgroup-setup.md  comparison.md  desktop-security.md  ebpf-file-journal.md  install.md  journal-coverage.md  landlock-demo.md  linux-compatibility.md  openclaw-support.md  permissions.md  product-completion-plan.md  product-proof-path.md  protected-zones.md  protection-matrix.md  prototype-demo.md  receipt-integrity.md  release-readiness.md  release-trust.md  reviewer-feedback.md  seccomp-filter.md  security-model.md  security-review-triage.md  vision.md
docs/design/: 2026-04-28-gui-v1-design.md
docs/examples/: README.md  openclaw.md  protect-credentials.md  readonly-notes.md  sample-receipt.txt  snapshot-project.md
ebpf/: warder_file_access.bpf.c  warder_network_egress.bpf.c
examples/openclaw/: agent-message.toml  gateway.toml  workspace-protected.toml
examples/protected-zones/: personal-project.toml  readonly-research.toml
examples/prototype/: landlock-demo.toml  local-demo.toml  quickstart.toml  quickstart.yaml
integrations/openclaw/: README.md
scripts/: appimage-artifact-smoke.sh  attack-pack-demo.sh  build-ebpf-file-journal.sh  build-ebpf-network-journal.sh  cli-flow-smoke.sh  collect-release-artifacts.sh  deb-artifact-smoke.sh  deb-install-smoke.sh  desktop-closed-gui-smoke.sh  ebpf-clang-detection-smoke.sh  ebpf-clang.sh  ebpf-file-journal-smoke.sh  ebpf-network-journal-smoke.sh  landlock-demo.sh  openclaw-integration-smoke.sh  profile-template-demo.sh  prototype-demo.sh  public-claim-smoke.sh  quickstart-demo.sh  release-artifacts-smoke.sh  release-trust-policy-smoke.sh  rpm-artifact-smoke.sh  verify-release-download.sh  write-release-notes.sh
tests/: README.md  adversarial-hardening.sh  final-sandbox-matrix.sh
(+19 files in other folders)
