[package]
name = "warder-cli"
version = "1.0.0-beta.1"
edition.workspace = true
license.workspace = true

[dependencies]
libc = "0.2"
hmac = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
warder-core = { path = "../core" }
warder-config = { path = "../config" }
warder-db = { path = "../db" }
warder-daemon = { path = "../daemon" }
warder-enforcement = { path = "../enforcement" }
warder-journal = { path = "../journal" }
warder-snapshot = { path = "../snapshot" }

[[bin]]
name = "warder"
path = "src/main.rs"

[features]
live-ebpf = ["warder-journal/live-ebpf"]
