[package]
name = "warder-db"
version = "1.0.0-beta.1"
edition.workspace = true
license.workspace = true

[dependencies]
warder-core = { path = "../core" }
warder-journal = { path = "../journal" }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
